# OpenShell

./: CONTRIBUTING.md  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: signal-chain-ci.yml  signal-chain-release.yml
crates/openconstruct-cli/: Cargo.toml
crates/openconstruct-cli/src/: main.rs
crates/openshell-bootstrap/: Cargo.toml
crates/openshell-cli/: Cargo.toml
crates/openshell-constraint-theory/: Cargo.toml
crates/openshell-construct/: Cargo.toml
crates/openshell-construct/src/: lib.rs
crates/openshell-core/: Cargo.toml
crates/openshell-driver-docker/: Cargo.toml
crates/openshell-driver-kubernetes/: Cargo.toml
crates/openshell-driver-podman/: Cargo.toml
crates/openshell-driver-vm/: Cargo.toml
crates/openshell-fleet-homology/: Cargo.toml
crates/openshell-flux-fracture/: Cargo.toml
crates/openshell-flux-vm/: Cargo.toml
crates/openshell-holonomy-consensus/: Cargo.toml
crates/openshell-ocsf/: Cargo.toml
crates/openshell-policy/: Cargo.toml
crates/openshell-prover/: Cargo.toml
crates/openshell-pythagorean48/: Cargo.toml
crates/openshell-registry/: Cargo.toml
crates/openshell-registry/src/: lib.rs
crates/openshell-router/src/: config.rs
crates/openshell-sandbox/: Cargo.toml
crates/openshell-server/: Cargo.toml
crates/openshell-signal-chain/: BETA-TESTING.md  Cargo.toml  README.md  debugging.md
crates/openshell-signal-chain/.github/ISSUE_TEMPLATE/: bug_report.yml
crates/openshell-signal-chain/benches/: bench_dial.rs  bench_room.rs  cascade.rs
crates/openshell-signal-chain/examples/: basic_dial.rs  fleet_operations.rs  inference_routing.rs  signal_chain_room.rs  vm_integration.rs
crates/openshell-signal-chain/src/: constraint.rs  dial.rs  error.rs  holonomy_bridge.rs  inference.rs  lib.rs  query.rs  room.rs  signal_chain.rs  snap.rs  spline_connector.rs
crates/openshell-signal-chain/tests/: test_signal_chain.rs
crates/openshell-tui/: Cargo.toml
crates/openshell-vfio/: Cargo.toml
