[package]
name = "openconstruct-cli"
version = "0.1.0"
edition = "2021"
description = "OpenConstruct CLI — Agent Onboarding in One Command"
license = "Apache-2.0"
repository = "https://github.com/SuperInstance/OpenConstruct"
readme = "../../README.md"

[[bin]]
name = "openconstruct"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
dirs = "5"
chrono = "0.4"
anyhow = "1"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"

[features]
default = ["network"]
network = ["reqwest", "tokio"]
