# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[package]
name = "openshell-flux-vm"
version = "0.1.0"
edition = "2021"
description = "Wrapper for flux-vm-v3 — proof-carrying constraint VM"
license = "Apache-2.0"
keywords = ['flux-vm', 'constraint-vm', 'proof-carrying', 'dal-a']
repository = "https://github.com/SuperInstance/OpenShell"
[dependencies]
flux-vm-v3 = { path = "../../vendored/flux-vm-v3" }
serde = { version = "1.0", features = ["derive"] }
