# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[package]
name = "openshell-holonomy-consensus"
version = "0.1.0"
edition = "2021"
description = "Wrapper for holonomy-consensus — GL(9) zero-holonomy consensus"
license = "Apache-2.0"
keywords = ['holonomy-consensus', 'zero-holonomy', 'gl9', 'byzantine-fault-tolerance']
repository = "https://github.com/SuperInstance/OpenShell"
[dependencies]
holonomy-consensus = { path = "../../vendored/holonomy-consensus" }
serde = { version = "1.0", features = ["derive"] }
