# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-signal-chain"
version = "0.1.0"
edition = "2021"
description = "Signal Chain Thesis - dial between hard-snapped algorithms and soft-inferenced models"
repository = "https://github.com/SuperInstance/OpenShell"
license = "Apache-2.0"
keywords = ["signal-chain", "dial", "inference", "knowledge-graph", "openshell"]
categories = ["data-structures", "science"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "test_signal_chain"
path = "tests/test_signal_chain.rs"

[[bench]]
name = "cascade"
harness = false

[[bench]]
name = "bench_room"
harness = false

[[bench]]
name = "bench_dial"
harness = false
